i changed a paragraph to my custom text

--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
                     <h1>Fashion</h1>
                     <h1 class="emphasize">and design</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Assumenda reprehenderit facere dignissimos nulla, 
-                        optio obcaecati laborum unde impedit! Voluptatem, 
-                        repellat. Placeat corrupti cumque laboriosam similique 
-                        provident ut tenetur, at et!
+                        My name is Kat, I am in the same class as Peter. Peter is good!
                     </p>
                 </div>
             </div>
