about apge done git pu

--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
         </ul>
         <div class="row">
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f1.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f2.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f3.jpeg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f4.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f5.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f6.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f7.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/s1.jpg" alt="">
+                <img src="img/f8.jpg" alt="">
             </div>
         </div>
     </section>
@@ -130,6 +130,7 @@
                     <a href="">Contact</a>
                 </li>
             </ul>
+            <p>Invisible, All rights reserved 2017.</p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
