change img and background color

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="navContainer clearfix">
             <div class="logo float-left">
-                InVisibles
+                InVisible
             </div>
             <div class="navLinks float-right">
                 <ul>
@@ -44,15 +44,13 @@
     <div class="aboutContainer">
         <h1>About Us</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ratione praesentium cupiditate illo, ullam recusandae omnis ut enim molestias eaque vitae esse. Officiis, praesentium blanditiis totam iste doloremque doloribus ipsam!
+            InVisible is a marketing agnecy working with high-end fashion brands. We deliver creative, trendy and insightful marketing plans for our clients. Our clients include LV, Gucci, Prada, YSL, and many more fashion brands. 
         </p>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ratione praesentium cupiditate illo, ullam recusandae omnis ut enim molestias eaque vitae esse. Officiis, praesentium blanditiis totam iste doloremque doloribus ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quaerat earum repudiandae quos fugiat, dolore voluptatibus animi inventore esse, molestiae iste amet asperiores totam vel deserunt autem! Eveniet, doloremque incidunt?
+            Invisible is created by young talents who are passionate about marketing and fashion. We aim not only to generate revenues for our clients, but also bring unforgettable experiences to consumers.
         </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ratione praesentium cupiditate illo, ullam recusandae omnis ut enim molestias eaque vitae esse. Officiis, praesentium blanditiis totam iste doloremque doloribus ipsam!
-        </p>
-        <img src="img/about1.jpg" alt="">
+  
+        <img src="img/about1.jpg" alt="about us" weight=auto height=auto>
     </div>
     <footer>
             <div class="footerLinks">
