--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="navContainer clearfix">
             <div class="logo float-left">
-                InVisibles
+                InVisible
             </div>
             <div class="navLinks float-right">
                 <ul>
@@ -30,7 +30,7 @@
                         <a href="gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blogsss</a>
+                        <a href="blog.html">Blogs</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -67,7 +67,7 @@
                 <img src="img/f4.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/f5.jpg" alt="">
+                <img src="img/i2.jpg" alt="">
             </div>
             <div class="col-md-3">
                 <img src="img/f6.jpg" alt="">
@@ -102,12 +102,12 @@
             </div>
             <div class="col-md-4 team">
                 <img src="img/kat.jpeg" alt="">
-                <p>Kat, CEO</p>
+                <p>Kat Yao, CEO</p>
                 
             </div>
             <div class="col-md-4 team">
                 <img src="img/panda.jpeg" alt="">
-                <p>Panda, CPO</p>
+                <p>Pan Da, CPO</p>
             </div>
         </div>
     </section>
