--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <img src="img/i2.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/f6.jpg" alt="">
+                <img src="img/i6.jpeg" alt="">
             </div>
             <div class="col-md-3">
                 <img src="img/f7.jpg" alt="">
