--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
             InVisible is a marketing agnecy working with high-end fashion brands. We deliver creative, trendy and insightful marketing plans for our clients. Our clients include LV, Gucci, Prada, YSL, and many more fashion brands. 
         </p>
         <p>
-            Invisible is created by young talents who are passionate about marketing and fashion. We aim not only to generate revenues for our clients, but also bring unforgettable experiences to consumers.
+            Invisible is created by young talents who are passionate about marketing and fashion. We aim not only to generate revenues for our clients, but also to bring unforgettable experiences to consumers.
         </p>
   
-        <img src="img/about1.jpg" alt="about us" weight=auto height=auto>
+        <img src="img/i1.jpg" alt="about us">
     </div>
     <footer>
             <div class="footerLinks">
