--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="navContainer clearfix">
             <div class="logo float-left">
-                InVisible
+                <img src="img/logo2.png" height="100">
             </div>
             <div class="navLinks float-right">
                 <ul>
