--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="img/i17.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i9.jpg" alt="">
+                <img src="img/i11.jpg" alt="">
             </div>
             <div class="col-md-3">
                 <img src="img/i10.jpg" alt="">
@@ -67,16 +67,16 @@
                 <img src="img/i15.jpeg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i15.jpg" alt="">
+                <img src="img/i13.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i13.jpg" alt="">
+                <img src="img/i15.jpg" alt="">
             </div>
             <div class="col-md-3">
                 <img src="img/i7.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i8.jpg" alt="">
+                <img src="img/i8.jpeg" alt="">
             </div>
         </div>
     </section>
