added one more page due to requirement

--- a/about.html
+++ b/about.html
@@ -30,7 +30,10 @@
                         <a href="gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blogsss</a>
+                        <a href="blog.html">Blogs</a>
+                    </li>
+                    <li>
+                        <a href="partners.html>">Partners</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
