--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <a href="blog.html">Blogs</a>
                     </li>
                     <li>
+                        <a href="partners.html>">Partners</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
