changes in the about us page

--- a/about.html
+++ b/about.html
@@ -52,7 +52,10 @@
         <p>
             Invisible is created by young talents who are passionate about marketing and fashion. We aim not only to generate revenues for our clients, but also to bring unforgettable experiences to consumers.
         </p>
-  
+        <h3>Our Principles</h3>
+        <p> Marketing is Business<br>
+            Marketing is Art<br>
+            Marketing is Life </p>
         <img src="img/i1.jpg" alt="about us">
     </div>
     <footer>
