finish gallery and blogs; git

--- a/blog.html
+++ b/blog.html
@@ -39,60 +39,51 @@
             </div>
         </div>
     </nav>
-    <div class="topBannerContainer">
-    </div>
-    <div class="aboutServiceContainer">
-        <h1>What we do</h1>
-        
-        <div class="row">
-            <div class="col-md-3">
-                <i class="fa fa-snowflake-o"></i>
-                <h2>Internet Marketing</h1>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eligendi alias recusandae? Rerum neque illo 
-                </p>
-            </div>
-            <div class="col-md-3">
-                <i class="fa fa-snowflake-o"></i>
-                <h2>Internet Marketing</h1>
-                <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eligendi alias recusandae? Rerum neque illo 
-                </p>
-            </div>
-            <div class="col-md-3">
-                <i class="fa fa-snowflake-o"></i>
-                <h2>Internet Marketing</h1>
-                <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eligendi alias recusandae? Rerum neque illo 
-                </p>
-            </div>
-            <div class="col-md-3">
-                <i class="fa fa-snowflake-o"></i>
-                <h2>Internet Marketing</h1>
-                <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eligendi alias recusandae? Rerum neque illo 
-                </p>
-            </div>
+    <section class="blogTopBanner">
+        <div class="blogTitle">
+            <h1>Blog</h1>
         </div>
-    </div>
-    <div class="aboutBanner">
-        <h1>Ready to work with us? Let's talk!</h1>
-        <a href="contact.html">Get in touch</a>
-    </div>
-    <div class="aboutContainer">
-        <h1>About Us</h1>
-        <p>
-            InVisible is a marketing agnecy working with high-end fashion brands. We deliver creative, trendy and insightful marketing plans for our clients. Our clients include LV, Gucci, Prada, YSL, and many more fashion brands. 
-        </p>
-        <p>
-            Invisible is created by young talents who are passionate about marketing and fashion. We aim not only to generate revenues for our clients, but also to bring unforgettable experiences to consumers.
-        </p>
-        <h3>Our Principles</h3>
-        <p> Marketing is Business<br>
-            Marketing is Art<br>
-            Marketing is Life </p>
-        <img src="img/i1.jpg" alt="about us">
-    </div>
+    </section>
+    <section class="blogContent">
+        <div class="blogBlock">
+            <img src="img/blog2.jpg" alt="">
+            <h1>10 Tips on how to increase your online presence.</h1>
+            <span>By <a href="">Peter Zheng</a></span> 
+            | <span>in <a href="">Online marketing campaign</a></span>
+            | <span>posted 31 March, 2017</span>
+            | <span>17 Comments</span>
+            | <span>204 Likes</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, asperiores at mollitia explicabo dolore assumenda aspernatur error, tempora iure debitis quibusdam iste ducimus inventore, impedit blanditiis ullam accusamus. Impedit, quia?</p>
+            <a href="" class="read">Read More</a>
+        </div>
+        <div class="blogBlock">
+            <img src="img/blog3.jpg" alt="">
+            <h1>10 Tips on how to increase your online presence.</h1>
+            <span>By <a href="">Peter Zheng</a></span> 
+            | <span>in <a href="">Online marketing campaign</a></span>
+            | <span>posted 31 March, 2017</span>
+            | <span>17 Comments</span>
+            | <span>204 Likes</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, asperiores at mollitia explicabo dolore assumenda aspernatur error, tempora iure debitis quibusdam iste ducimus inventore, impedit blanditiis ullam accusamus. Impedit, quia?</p>
+            <a href="" class="read">Read More</a>
+        </div>
+        <div class="blogBlock">
+            <img src="img/blog4.jpg" alt="">
+            <h1>10 Tips on how to increase your online presence.</h1>
+            <span>By <a href="">Peter Zheng</a></span> 
+            | <span>in <a href="">Online marketing campaign</a></span>
+            | <span>posted 31 March, 2017</span>
+            | <span>17 Comments</span>
+            | <span>204 Likes</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, asperiores at mollitia explicabo dolore assumenda aspernatur error, tempora iure debitis quibusdam iste ducimus inventore, impedit blanditiis ullam accusamus. Impedit, quia?</p>
+            <a href="" class="read">Read More</a>
+        </div>
+    </section>
+
+
     <footer>
             <div class="footerLinks">
                 <ul>
