--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                         <a href="blog.html">Blogs</a>
                     </li>
                     <li>
-                        <a href="partners.html>">Partners</a>
-                    </li>
-                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -48,14 +45,16 @@
         </div>
     </section>
     <section class="homeGallerySection">
-        <ul>
-            <li class="active">All</li>
-            <li>Louis Vitton</li>
-            <li>Coach</li>
-            <li>Yves Saint Laurent</li>
-            <li>Prada</li>
-            <li>Gucci</li>
-        </ul>
+        <div class="tabsContainer">
+            <ul>
+                <li class="active">All</li>
+                <li>Louis Vitton</li>
+                <li>Coach</li>
+                <li>Yves Saint Laurent</li>
+                <li>Prada</li>
+                <li>Gucci</li>
+            </ul>
+        </div>
         <div class="row">
             <div class="col-md-3">
                 <img src="img/i17.jpg" alt="">
