--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
             | <span>204 Likes</span>
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, asperiores at mollitia explicabo dolore assumenda aspernatur error, tempora iure debitis quibusdam iste ducimus inventore, impedit blanditiis ullam accusamus. Impedit, quia?</p>
-            <a href="" class="read">Read More</a>
+            <a href="article.html" class="read">Read More</a>
         </div>
         <div class="blogBlock">
             <img src="img/blog3.jpg" alt="">
@@ -67,7 +67,7 @@
             | <span>204 Likes</span>
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, asperiores at mollitia explicabo dolore assumenda aspernatur error, tempora iure debitis quibusdam iste ducimus inventore, impedit blanditiis ullam accusamus. Impedit, quia?</p>
-            <a href="" class="read">Read More</a>
+            <a href="article.html" class="read">Read More</a>
         </div>
         <div class="blogBlock">
             <img src="img/blog4.jpg" alt="">
@@ -79,7 +79,7 @@
             | <span>204 Likes</span>
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, asperiores at mollitia explicabo dolore assumenda aspernatur error, tempora iure debitis quibusdam iste ducimus inventore, impedit blanditiis ullam accusamus. Impedit, quia?</p>
-            <a href="" class="read">Read More</a>
+            <a href="article.html" class="read">Read More</a>
         </div>
     </section>
 
