--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">    
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <title>InVisible</title>
     </head>
     <body id="body">
@@ -38,14 +38,66 @@
                 </div>
             </div>
         </nav>
+        <div class="contactTopBanner">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d12088.582037558916!2d-73.83602499999999!3d40.758824249999996!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1512578943996" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
         <section class="contactSection">
-            
+            <div class="contactTitle">
+                <h3>Say Hello!</h3>
+                <h1>We would love to hear from you.</h1>
+            </div>
+            <div class="contactRow">
+                <div class="contactItem">
+                        <i class="fa fa-phone"></i>
+                        1.800.234.2114
+                </div>  
+                <div class="contactItem">
+                        <i class="fa fa-envelope-o"></i>
+                        support@invisible.com
+                </div>  
+                <div class="contactItem">
+                        <i class="fa fa-location-arrow"></i>
+                        129 Main Street #202
+                        Panda Town, N.Y. 11342
+                </div>
+            </div>
+            <div class="formMainRow">
+                <div class="formLeft">
+                    <input type="text" placeholder="Full Name">
+                    <input type="text" placeholder="Phone #">
+                    <input type="text" placeholder="Email">
+                </div>
+                <div class="formRight">
+                    <textarea name="" id="" cols="30" rows="8" placeholder="Comments"></textarea>
+                </div>
+            </div>
         </section>
 
 
         <footer>
-            Copyright &copy; 2017 InVisible Inc.<br>
-            <a href="mailto:insiviblesupport@gmail.com">insiviblesupport@gmail.com</a>
+            <div class="footerLinks">
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">About</a>
+                    </li>
+                    <li>
+                        <a href="">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="">Blogs</a>
+                    </li>
+                    <li>
+                        <a href="">Contact</a>
+                    </li>
+                </ul>
+                <p>Invisible, All rights reserved 2017.</p>
+            </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     </body>
-</html>
+    </html>
