changes in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -49,44 +49,44 @@
     </section>
     <section class="galleryContent">
         <div class="galleryRow">
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g1.jpg)">
 
             </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g15.jpg)">
 
             </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g16.jpeg)">
 
             </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
-
-            </div>
-        </div>
-        <div class="galleryRow">
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
-
-            </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
-
-            </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
-
-            </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g10.jpeg)">
 
             </div>
         </div>
         <div class="galleryRow">
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g5.jpg)">
 
             </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g6.jpg)">
 
             </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g17.jpg)">
 
             </div>
-            <div class="imageBox" style="background-image:url(./img/i2.jpg)">
+            <div class="imageBox" style="background-image:url(./img/g11.jpg)">
+
+            </div>
+        </div>
+        <div class="galleryRow">
+            <div class="imageBox" style="background-image:url(./img/g18.jpg)">
+
+            </div>
+            <div class="imageBox" style="background-image:url(./img/g8.jpg)">
+
+            </div>
+            <div class="imageBox" style="background-image:url(./img/g7.jpg)">
+
+            </div>
+            <div class="imageBox" style="background-image:url(./img/g14.jpg)">
 
             </div>
         </div>
