--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <img src="img/i17.jpg" alt="">
+                <img src="img/f1.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i11.jpg" alt="">
+                <img src="img/f2.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i10.jpg" alt="">
+                <img src="img/f4.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i15.jpeg" alt="">
+                <img src="img/f8.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i13.jpg" alt="">
+                <img src="img/f5.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i15.jpg" alt="">
+                <img src="img/f3.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i7.jpg" alt="">
+                <img src="img/f7.jpg" alt="">
             </div>
             <div class="col-md-3">
-                <img src="img/i8.jpeg" alt="">
+                <img src="img/f6.jpg" alt="">
             </div>
         </div>
     </section>
