changes in tabs

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         <div class="tabsContainer">
             <ul>
                 <li class="active">All</li>
-                <li>Louis Vitton</li>
-                <li>Coach</li>
-                <li>Yves Saint Laurent</li>
+                <li>Chanel</li>
                 <li>Prada</li>
+                <li>Yves Saint Laurent</li>
+                <li>Tiffany co.</li>
                 <li>Gucci</li>
+                <li>Givenchy</li>
+                <li>Miu Miu</li>
+                <li>Burberry</li>
             </ul>
         </div>
         <div class="row">
