changes in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
     <section class="galleryHeader">
         <div class="galleryTitle">
             <h1>We are <br> Invisible</h1>
-            <p>We are a fashion branding agency!</p>
+            <p>Scroll down to see our works!</p>
             <a href="">Learn more about us</a>
             <a href="">Contact us</a>
         </div>
