--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <div class="topBannerContainer">
     </div>
     <div class="aboutServiceContainer">
-        <h1>What we do</h1>
+        <h1>What We Do</h1>
         
         <div class="row">
             <div class="col-md-3">
