final change for mobile version

--- a/article.html
+++ b/article.html
@@ -33,6 +33,9 @@
                         <a href="blog.html">Blogs</a>
                     </li>
                     <li>
+                        <a href="article.html">Article</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -92,6 +95,7 @@
                 <textarea name="" id="" cols="30" rows="8" placeholder="Comments"></textarea>
             </div>
         </div>
+        <a href="" class="submitBtn">Submit</a>
     </section>
 
 
