--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,9 @@
                         <a href="blog.html">Blogs</a>
                     </li>
                     <li>
+                        <a href="article.html">Article</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
