--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
                             <a href="blog.html">Blogs</a>
                         </li>
                         <li>
+                            <a href="article.html">Article</a>
+                        </li>
+                        <li>
                             <a href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -71,6 +74,7 @@
                     <textarea name="" id="" cols="30" rows="8" placeholder="Comments"></textarea>
                 </div>
             </div>
+            <a href="" class="submitBtn">Submit</a>
         </section>
 
 
