--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,9 @@
                         <a href="blog.html">Blogs</a>
                     </li>
                     <li>
+                        <a href="article.html">Article</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -105,6 +108,9 @@
                     </li>
                     <li>
                         <a href="">Blogs</a>
+                    </li>
+                    <li>
+                        <a href="article.html">Article</a>
                     </li>
                     <li>
                         <a href="">Contact</a>
